# eppic

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml  cmake-ubuntu-latest.yml
src/: main.cpp
src/constants/: physical.hpp
src/core/: config.cpp  config.hpp  model.hpp
src/fields/: scalar.cpp  scalar.hpp  scalar3.cpp  scalar3.hpp  triplet.hpp  vector3.cpp  vector3.hpp
src/utils/: messages.cpp  messages.hpp
tests/: CMakeLists.txt  example_test.cpp  field_scalar.cpp
